src/pages/main/main.scss
/* ... */
.main {
    display: flex;
    overflow: hidden;
    width: 100%;
    height: calc(100vh - 9rem);
    padding: 1.6rem;

    @include mobile-or-tablet-screen {
        height: calc(100vh - 6rem);
        padding: 0;
    }

    &__tabs-wrapper {
        height: 100%;
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    &__container {
        position: relative;
        border: none;
        max-width: 100%;
        width: 100%;
        height: 100%;
        flex: 1;
        min-width: 0;

        &.no-scroll {
            overflow: hidden;
        }

        &--active {
            // css for onboard tour overlay
            &:before {
                content: '';
                position: fixed;
                left: 0;
                top: 0;
                width: 100%;
                height: 100%;
                background: rgb(0 0 0 / 72%);
                opacity: 0.7;
                z-index: 100;
            }
        }

        .dc-tabs {
            height: 100%;
            width: 100%;
            display: grid;
            grid-template-rows: auto 1fr;

            &__content {
                overflow-y: auto;
                overflow-x: hidden;
                width: 100%;
            }

            &__active-line {
                background-color: #f7c53b;
                transition: none;
            }

            &__active {
                background: var(--general-main-1);
                color: #f7c53b !important;
            }

            &__list {
                background: var(--general-section-1);
                justify-content: start;

                @include mobile-or-tablet-screen {
                    overflow-x: auto;
                    overflow-y: hidden;
                    -ms-overflow-style: none;
                    scrollbar-width: none;

                    &::-webkit-scrollbar {
                        display: none;
                    }
                }

                &--header {
                    &--main {
                        &__tabs {
                            @include mobile-or-tablet-screen {
                                width: 100%;
                                overflow-x: auto;
                                padding: 0.8rem 1.6rem 0;
                            }
                        }
                    }
                }

                &--border-bottom {
                    @include mobile-or-tablet-screen {
                        border-bottom: 0;
                    }
                }
            }

            &__content {
                @include mobile-or-tablet-screen {
                    width: 100%;
                    overflow-x: auto;

                    &--no-result {
                        @include flex-center;

                        flex-direction: column;
                        justify-content: flex-start;
                        height: 100vh;
                        margin-top: 5rem;

                        svg {
                            margin-bottom: 2.4rem;
                        }

                        h1 {
                            margin-bottom: 0.8rem;
                        }

                        span {
                            word-break: break-word;
                            text-align: center;
                        }
                    }
                }

                &--main {
                    &__tabs {
                        display: flex;
                        justify-content: space-between;

                        @include mobile-or-tablet-screen {
                            flex-direction: column;
                            background-color: var(--general-section-1);
                        }
                    }
                }
            }

            &__item {
                border-top-left-radius: 1rem;
                border-top-right-radius: 1rem;
                height: 4.8rem;
                padding: 0 2rem;
                width: auto;

                @include flex-center;

                svg {
                    padding-inline-end: 0;
                    margin-inline-end: 0.8rem;

                    @include mobile-or-tablet-screen {
                        margin-inline-end: 0.4rem;
                    }
                }

                &__icon {
                    @include mobile-or-tablet-screen {
                        padding-top: 0.5rem;
                    }
                }
            }
        }
    }

    &__run-strategy-wrapper {
        inset-inline-end: 1.6rem;
        top: 1.6rem;
        z-index: 2;

        @include desktop-screen {
            position: absolute;
        }

        .animation {
            &__button#db-animation {
                &__run-button {
                    background-color: var(--button-primary-default);
                }

                &__stop-button {
                    background-color: var(--button-primary-hover);
                }
            }

            &__container {
                background-color: var(--general-main-1);
            }
        }
    }

    &__sidebar-wrapper {
        &--active {
            position: fixed;
            right: 0;
        }

        &--hidden {
            display: none;
        }
    }
}

.animation__wrapper {
    .animation {
        &__button#db-animation {
            &__run-button {
                background-color: var(--button-primary-default);
            }

            &__stop-button {
                background-color: var(--button-primary-hover);
            }
        }
    }
}
/* ... */

